preload emotes to fix wrong width calculations

--- a/src/style.scss
+++ b/src/style.scss
@@ -86,6 +86,7 @@ body {
 
         & > .badge {
           height: 1.25em;
+          width: 1.25em;
           border-radius: 0.15em;
           overflow: hidden;
 
@@ -96,8 +97,6 @@ body {
       }
 
       white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
 
       & > .name {
         font-weight: bold;
@@ -121,7 +120,11 @@ body {
 
         & > .emote {
           height: 1.25em;
+          min-width: 1.25em;
           overflow: hidden;
+
+          flex-shrink: 0;
+          flex-grow: 0;
 
           & + img:not(:last-child) {
             margin-right: 0.25em;
